# capcut-mate

./: .gitignore  Clash.Verge_2.5.1_aarch64.dmg  Dockerfile  README.md  README.zh.md  capcut-mate-backend.spec  config.py  docker-compose.example.yaml  docker-compose.yaml  exceptions.py  main.py  openapi.yaml  pyproject.toml
config/: huazi.json
desktop-client/: .gitignore  LICENSE  main.js  package-lock.json  package.json  preload.js
docs/: WizTree.lnk  add_audios.md  add_audios.zh.md  add_captions.md  add_captions.zh.md  add_effects.md  add_effects.zh.md  add_filters.md  add_filters.zh.md  add_images.md  add_images.zh.md  add_keyframes.md  add_keyframes.zh.md  add_masks.md  add_masks.zh.md  add_sticker.md  add_sticker.zh.md  add_text_style.md  add_text_style.zh.md  add_videos.md  add_videos.zh.md  audio_infos.md  audio_infos.zh.md  audio_timelines.md  audio_timelines.zh.md  caption_infos.md  caption_infos.zh.md  create_draft.md  create_draft.zh.md  desktop-release-runbook.zh.md  easy_create_material.md  easy_create_material.zh.md  effect_infos.md  effect_infos.zh.md  filter_infos.md  filter_infos.zh.md  gen_video.md  gen_video.zh.md  gen_video_status.md  gen_video_status.zh.md  (+32 more)
scripts/: export-smart-assets.py
smart-assets/: manifest.json
src/: __init__.py
template/: readme.md
tests/: __init__.py  manual_test_audio_infos.py  manual_test_caption_infos.py  manual_test_effect_infos.py  manual_test_imgs_infos.py  manual_test_keyframes_infos.py  manual_test_video_infos.py  test_add_audios.py  test_add_captions_text_effect.py  test_add_images.py  test_add_masks.py  (+57 more)
(+546 files in other folders)
